# SmartGarden

./: BH1750.cpp  BH1750.h  BH1750test.cpp  CMakeLists.txt  Drivers.h  Humidity_Motor.h  MainWindow.cpp  MainWindow.h  README.md  README_CC_TEST.txt  Servo.cpp  ServoGetSample.cpp  Servo_new.cpp  Servo_no_fan.cpp  camaraTest.cpp  cameraTest.cpp  command.txt  git_test.txt  git_test02.txt  main.cpp  pestDetect.cpp  servo.cpp  servo.h  soilMoisture.cpp  test.txt  test01.cpp  test_camera.cpp
HumidityTest_PumpControl/: HumidityTest_MotorWater.cpp  main.cpp
cameranew/: CMakeLists.txt  main.cpp
driver/: CMakeLists.txt
driver/include/: camera.h  readme  servo.h  soilSensor.h
driver/src/: BH1750.cpp  main.cpp  pestDetect.cpp  readme
final_backup/src/: soilSensor.cpp
finaltest/: CMakeLists.txt
finaltest/include/: camera.h  soilSensor.h
finaltest/src/: BH1750.cpp  BH1750.h  Servo_new.cpp  main.cpp  pestDetect.cpp  servo.cpp
gui/: main.cpp  picamera.cpp  picamera.h
motortest/: CMakeLists.txt  main.cpp
pestDetection/: ServoGetSample.cpp
soiltest/: CMakeLists.txt
soiltest/include/: soilSensor.h
soiltest/soiltest/src/: main.cpp  soilSensor.cpp
soiltest/src/: main.cpp  soilSensor.cpp
